[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/healthbar-back.png" type="Texture" id=1]
[ext_resource path="res://assets/healthbar-progress.png" type="Texture" id=2]
[ext_resource path="res://assets/healthbar-over.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/Scripts/Shieldbar.gd" type="Script" id=4]

[node name="ShieldBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
gain_shields = Color( 0.360784, 1, 0.47451, 1 )
lose_shields = Color( 1, 0.360784, 0.360784, 1 )

[node name="ShieldUnder" type="TextureProgress" parent="."]
margin_right = 390.0
margin_bottom = 54.0
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 1, 0.360784, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldOver" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0, 0.576471, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldLabel" type="Label" parent="ShieldOver"]
anchor_left = 0.9
anchor_right = 0.9
anchor_bottom = 1.0
margin_left = -16.0
text = "25"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
